# colorOfMind

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  build.sh  clean.sh  clean.sh~  project.txt
Arduino/emotion_light_arduino/: emotion_light_arduino.ino
Processing/colorOfMind_demo/: colorOfMind_demo.pde
cmake_modules/: FindFFTW.cmake  FindFFTW.cmake~  Findoscpack.cmake~
doc/: video_concept.txt
doc/Concept/: observation_headset_on.txt
doc/Statistics/: R_doc
examples/arduino/: CMakeLists.txt  Makefile  arduino.c  cmake_install.cmake
examples/dmx/: CMakeLists.txt  Makefile  cmake_install.cmake  dmx_demo.cpp
examples/emokit_osc/: CMakeLists.txt  CMakeLists.txt~  Makefile~  emokit_osc.cpp  emokit_osc.cpp~
examples/emokit_osc/pd/: basic.pd  emokit-osc.pd  emokit-osc.pd~
examples/emokitd/: CMakeLists.txt  emokitd.c
examples/emotiv/: CMakeLists.txt  CMakeLists.txt~  emotiv.c  emotiv.cpp
examples/main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.c~
examples/readData/: CMakeLists.txt  readData.c
examples/saveData/: CMakeLists.txt  saveData.c
examples/saveDataToFile/: CMakeLists.txt  saveDataToFile.c
examples/study/: CMakeLists.txt  Makefile  cmake_install.cmake  study.c
include/dmx512/: ms_stdint.h  ofxDmx.h  pro_driver.h  serial.h
include/emokit/: classifier.h  emokit_dsp.h  emotions.h  light.h  plot.h  read_data.h  save_data.h
include/oscpack/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~
include/oscpack/examples/: OscDump.cpp  SimpleReceive.cpp  SimpleSend.cpp
include/oscpack/ip/: IpEndpointName.cpp
include/oscpack/osc/: OscHostEndianness.h  OscOutboundPacketStream.h  OscPrintReceivedElements.cpp  OscReceivedElements.cpp  OscTypes.h
include/oscpack/tests/: OscReceiveTest.cpp  OscSendTests.cpp  OscUnitTests.cpp
lib/: band_waves.h  band_waves.h~  emo_dsp.h  emokit.h
lib/emokit/: band_waves.h  classifier.h  data_headset.h  emo_dsp.h  emokit.h
lib/oscpack/: CMakeLists.txt
linux/: z65_usbdmx.rules
sample/: foo1Normal3  foo1Normal4  foo1Relax4  foo2Normal1  foo2Relax1
samples/: foo1Reading  foo1Relaxing  foo2Reading  foo2Relaxing  test  test2
samples/study/: .RData  .Rhistory  p1_happy  p1_start  p2_neutral2  p2_sad  p3_sad  p3_start  test_happy  test_neutral1  test_neutral2  test_sad  test_start
samples/study/results/: 11neutral  1happy~  1neutral  2happy  2neutral  2sad  3happy~  3neutral  3neutral~  3sad  3sad~
samples/study/study1/: p1_excited_s2  p1_sad_s2  p2_relax_s2  p3_happy_s2  p3_relax_s2
samples/study/study2/: p1_neutral1  p1_neutral2  p1_sad  p2_happy  p2_neutral1  p2_start  p3_happy  p3_neutral1  p3_neutral2
samples/study/study2/results/: 11neutral~  1happy  1neutral~  1sad  1sad~  2happy~  2neutral~  2sad~  3happy
src/: CMakeLists.txt  CMakeLists.txt~  band_waves.c  band_waves.c~  band_waves.h  classifier.c  data_headset.c  dmx.c  emo_dsp.c  emo_dsp.c~  emokit.c  emokit.c~  emokit_dsp.c  emokit_libusb.c  emotions.c  gnuplot_i.c  light.c  main.c  main.c~  ofxDmx.cpp  plot.c  read_data.c  save_data.c  serial.c
study1/: generate.sh  p1_happy_s2  p1_relax_s2  p2_excited_s2  p2_happy_s2  p2_sad_s2  p3_excited_s2  p3_sad_s2
study1/results/: R.sh  excited1.data  excited2.data  excited3.data  happy1.data  happy2.data  happy3.data  relax1.data  relax2.data  relax3.data  sad1.data  sad2.data  sad3.data
